--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="card box-shadow">
             <img class="card-img-top" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg">
             <div class="card-body">
-              <h5 class="card-title text-center">Nome da loja</h5>
+              <h5 class="card-title text-center" href="http://www.havan.com.br">Havan</h5>
               <p class="card-text">3,25% de Takeback</p>
             </div>
           </div>
