Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-md-4 p-3">
           <div class="card box-shadow">
-            <img class="card-img-top" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg">
+            <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
             <div class="card-body">
               <h5 class="card-title text-center" href="http://www.havan.com.br">Havan</h5>
               <p class="card-text">3,25% de Takeback</p>
