Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 p-2">
-          <a href="www.havan.com.br"> </a>
+          <a href="http://www.havan.com.br"> </a>
           <div class="card box-shadow">
-            <a href="www.havan.com.br">
+            <a href="http://www.havan.com.br">
               <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg"> </a>
             <div class="card-body text-center">
-              <a href="www.havan.com.br">
+              <a href="http://www.havan.com.br">
                 <h5 class="card-title">Havan</h5>
                 <p class="card-text">3,25% de Takeback</p>
               </a>
