--- a/index.html
+++ b/index.html
@@ -18,18 +18,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 p-2">
-          <a href="http://www.havan.com.br"> </a>
-          <div class="card box-shadow">
-            <a href="http://www.havan.com.br">
-              <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg"> </a>
-            <div class="card-body text-center">
-              <a href="http://www.havan.com.br">
-                <h5 class="card-title">Havan</h5>
-                <p class="card-text">3,25% de Takeback</p>
-              </a>
-              <a href="#" class="card-link">Detalhes</a>
+          <a href="http://www.havan.com.br">
+            <div class="card box-shadow">
+              <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">Havan</h5>
+                <p class="card-text text-dark">3,25% de Takeback</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
