--- a/index.html
+++ b/index.html
@@ -17,16 +17,53 @@
   <div class="py-4">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 p-2">
-          <a href="http://www.havan.com.br">
-            <div class="card box-shadow">
-              <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
-              <div class="card-body text-center">
-                <h5 class="card-title text-dark">Havan</h5>
-                <p class="card-text text-dark">3,25% de Takeback</p>
-              </div>
+        <div class="col-md-12">
+          <div class="card-deck">
+            <div class="card">
+              <a href="http://www.havan.com.br">
+                <div class="card box-shadow">
+                  <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-dark">Havan</h5>
+                    <p class="card-text text-dark">3,25% de Takeback</p>
+                  </div>
+                </div>
+              </a>
             </div>
-          </a>
+            <div class="card">
+              <a href="http://www.havan.com.br">
+                <div class="card box-shadow">
+                  <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-dark">Havan</h5>
+                    <p class="card-text text-dark">3,25% de Takeback</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="http://www.havan.com.br">
+                <div class="card box-shadow">
+                  <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-dark">Havan</h5>
+                    <p class="card-text text-dark">3,25% de Takeback</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="http://www.havan.com.br">
+                <div class="card box-shadow">
+                  <img class="card-img-top px-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Logo_Lojas_Havan.jpg/200px-Logo_Lojas_Havan.jpg">
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-dark">Havan</h5>
+                    <p class="card-text text-dark">3,25% de Takeback</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
