Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- Modal to show store details -->
-  <div class="modal fade" id="store_modal" tabindex="-1" role="dialog" aria-labelledby="store_modal_label" aria-hidden="true">
+  <div class="modal fade" id="store_modal" tabindex="-1" role="dialog" aria-labelledby="store_modal_label" aria-hidden="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
