--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title text-center" id="modal_title_id">Modal title</h5>
+          <h5 class="modal-title text-center" id="modal_title_id">Havan</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">×</span> </button>
         </div>
         <div class="modal-body">
           <div class="row">
             <div class="col-md-4">
-              <img src="download.png" class="img-responsive" id="modal_image_id"> </div>
-            <div class="col-md-8">
-              <p class="">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 text-center">
+              <img src="download.png" class="img-responsive" id="modal_image_id">
               <p class="">3,45% de Takeback</p>
             </div>
-            <div class="col-md-8"></div>
+            <div class="col-md-8">
+              <p class="">"Alimentos e Bebidas","Beleza e Saúde","Celulares e Smartphones","Eletrodomésticos","Eletrônicos e Tecnologia","Esporte e Lazer","Livros CDs e DVDs","Loja de Departamentos","Moda e Acessórios","Brinquedos e Jogos","Móveis e Decoração"</p>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
