Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <div class="modal-body">
           <div class="row">
-            <div class="col-md-4">
-              <img src="download.png" class="img-responsive" id="modal_image_id">
-              <p class="">3,45% de Takeback</p>
+            <div class="col-md-4 text-center">
+              <img src="download.png" class="img" id="modal_image_id">
+              <p class="lead py-3"><b>3,45% de Takeback</b></p>
             </div>
             <div class="col-md-8">
-              <p class="">"Alimentos e Bebidas","Beleza e Saúde","Celulares e Smartphones","Eletrodomésticos","Eletrônicos e Tecnologia","Esporte e Lazer","Livros CDs e DVDs","Loja de Departamentos","Moda e Acessórios","Brinquedos e Jogos","Móveis e Decoração"</p>
+              <p class="">Alimentos e Bebidas", "Beleza e Saúde", "Celulares e Smartphones", "Eletrodomésticos", "Eletrônicos e Tecnologia", "Esporte e Lazer", "Livros CDs e DVDs", "Loja de Departamentos", "Moda e Acessórios", "Brinquedos e Jogos", "Móveis e Decoração"</p>
             </div>
           </div>
         </div>
