--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title text-center" id="modal_title_id">Havan</h5>
+          <h5 class="modal-title" id="modal_title_id">Havan</h5>
+          <h5 class="modal-title text-right w-100 mx-4">Rating: 4.8</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">×</span> </button>
         </div>
         <div class="modal-body">
