Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-beta.1.css" type="text/css"> </head>
 
-<body>
+<body class="">
   <!-- Modal to show store details -->
   <div class="modal fade" id="store_modal" tabindex="-1" role="dialog" aria-labelledby="store_modal_label" aria-hidden="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -20,12 +20,24 @@
         </div>
         <div class="modal-body">
           <div class="row">
-            <div class="col-md-4 text-center">
-              <img src="download.png" class="img" id="modal_image_id">
+            <div class="col-md-6 text-center">
+              <img src="download.png" class="img my-2 w-100" id="modal_image_id">
               <p class="lead py-3"><b>3,45% de Takeback</b></p>
             </div>
-            <div class="col-md-8">
-              <p class="">Alimentos e Bebidas", "Beleza e Saúde", "Celulares e Smartphones", "Eletrodomésticos", "Eletrônicos e Tecnologia", "Esporte e Lazer", "Livros CDs e DVDs", "Loja de Departamentos", "Moda e Acessórios", "Brinquedos e Jogos", "Móveis e Decoração"</p>
+            <div class="col-md-6">
+              <ul class="">
+                <li>Alimentos e Bebidas</li>
+                <li>Beleza e Saúde</li>
+                <li>Celulares e Smartphones</li>
+                <li>Eletrodomésticos</li>
+                <li>Eletrônicos e Tecnologia</li>
+                <li>Esporte e Lazer</li>
+                <li>Livros CDs e DVDs</li>
+                <li>Loja de Departamentos</li>
+                <li>Moda e Acessórios</li>
+                <li>Brinquedos e Jogos</li>
+                <li>Móveis e Decoração</li>
+              </ul>
             </div>
           </div>
         </div>
