Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" id="modal_button_id" class="btn btn-primary">Visitar site da loja</button>
+          <button type="button" id="modal_button_id" class="btn btn-primary btn-block btn-lg">Visitar site da loja</button>
         </div>
       </div>
     </div>
