Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="modal-header">
           <h4 class="modal-title w-100 mx-4" id="modal_title_id">Havan</h4>
           <h5 class="modal-title text-right w-100 mx-4">Rating: 4.8</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">×</span> </button>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true" class="">×</span> </button>
         </div>
         <div class="modal-body">
           <div class="row">
