--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
   <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-beta.1.css" type="text/css"> </head>
 
 <body class="">
+  <div class="py-2">
+    <div class="container">
+      <div class="row" id="orderBy_row">
+        <div class="col-md-6">
+          <p> 11 Lojas encontradas </p>
+        </div>
+        <div class="col-md-6 text-right">
+          <div id="btn-dropdown" class="btn-group">
+            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Ordenar por: </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#" id="orderByID">Ordenar por ID</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Modal to show store details -->
   <div class="modal fade" id="store_modal" tabindex="-1" role="dialog" aria-labelledby="store_modal_label" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
