Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -16,17 +16,13 @@
           <p> 11 Lojas encontradas </p>
         </div>
         <div class="col-md-6 text-right">
-          <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle text-gray-dark" type="button" data-toggle="dropdown">Ornedar por:<span class="caret"></span></button>
-            <ul class="dropdown-menu text-left px-2">
-              <li>
-                <a href="#" class="text-gray-dark">Ordenar por nome</a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <a href="#" class="text-gray-dark">Ordenar por Takeback</a>
-              </li>
-            </ul>
+          <div id="btn-dropdown" class="btn-group pi-draggable" draggable="true">
+            <button class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown"> Dropdown </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Separated link</a>
+            </div>
           </div>
         </div>
       </div>
